--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.2"
 before_install:
-  - sudo apt-get install xz-utils
+  - sudo apt-get install liblzma-dev
 install:
   - "python setup.py install"
 before_script:
