Try Python 2.6 and 2.7 under TravisCI (allowed to fail)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
+  - "2.6"
+  - "2.7"
   - "3.1"
   - "3.2"
 before_install:
@@ -10,3 +12,7 @@ before_script:
   - "cd test"
 script:
   - "python test_lzma.py"
+matrix:
+  allow_failures:
+    - python: "2.6"
+    - python: "2.7"
