Include license file
Add the license file to `MANIFEST.in` for packaging.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@
 # This tells distutils what files to distribute.
 
 include README.md
+include LICENSE
 recursive-include backports *.py
 recursive-include test *.py
