--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -130,8 +130,8 @@ install:
   - "7z x xz-5.2.3-windows.7z"
 
   # Debugging to see where setup.py will check for the headers...
-  - "python -c 'import sys; print(sys.prefix)'"
-  - "python -c 'import os; os.path.expanduser(\'~\')'"
+  - "python -c \"import sys; print(sys.prefix)\""
+  - "python -c \"import os; os.path.expanduser('~')\""
 
 build_script:
   # Build the compiled extension
