--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -131,7 +131,7 @@ install:
 
   # Debugging to see where setup.py will check for the headers...
   - "python -c \"import sys; print(sys.prefix)\""
-  - "python -c \"import os; os.path.expanduser('~')\""
+  - "python -c \"import os; print(os.path.expanduser('~'))\""
 
 build_script:
   # Build the compiled extension
