--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -132,6 +132,8 @@ install:
   - "md C:/Users/appveyor/lib/"
   - if "%PYTHON_ARCH%"=="32" cp C:/Users/appveyor/bin_i686/liblzma.* C:/Users/appveyor/lib/"
   - if "%PYTHON_ARCH%"=="64" cp C:/Users/appveyor/bin_x86-64/liblzma.* C:/Users/appveyor/lib/"
+  - "%CMD_IN_ENV% gendef C:/Users/appveyor/lib/liblzma.dll
+  - "%CMD_IN_ENV% dlltool -D C:/Users/appveyor/lib/liblzma.dll -d C:/Users/appveyor/lib/liblzma.def -l C:/Users/appveyor/lib/liblzma.dll.a
 
 build_script:
   # Build the compiled extension
