--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,36 @@ addons:
   apt:
     packages:
     - liblzma-dev
+before_install:
+  - pushd $HOME
+  # There are TravisCI provided versions of PyPy and PyPy3, but currently too old.
+  # We therefore deactivate that, and download and unzip portable PyPy binaries.
+  - |
+    if [[ $TRAVIS_PYTHON_VERSION == 'pypy' ]]; then
+        deactivate
+        wget https://bitbucket.org/squeaky/portable-pypy/downloads/pypy-6.0.0-linux_x86_64-portable.tar.bz2
+        tar -jxvf pypy-6.0.0-linux_x86_64-portable.tar.bz2
+        echo 'Setting up aliases...'
+        cd pypy-6.0.0-linux_x86_64-portable/bin/
+        export PATH=$PWD:$PATH
+        ln -s pypy python
+        echo 'Setting up pip...'
+        ./pypy -m ensurepip
+    fi
+  - |
+    if [[ $TRAVIS_PYTHON_VERSION == 'pypy3' ]]; then
+        deactivate
+        wget https://bitbucket.org/squeaky/portable-pypy/downloads/pypy3.5-6.0.0-linux_x86_64-portable.tar.bz2
+        tar -jxvf pypy3.5-6.0.0-linux_x86_64-portable.tar.bz2
+        echo 'Setting up aliases...'
+        cd pypy3.5-6.0.0-linux_x86_64-portable/bin/
+        export PATH=$PWD:$PATH
+        ln -s pypy3 python
+        echo 'Setting up pip...'
+        ./pypy3 -m ensurepip
+        ln -s pip3 pip
+    fi
+  - popd
 install:
   - "python setup.py install"
 before_script:
